# flutter_ffi_opencv_example

./: .gitattributes  .gitignore  README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/neyasis/open_cv/example/open_cv_example/: MainActivity.java
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/opencv2.framework/Versions/A/Headers/: Core.h  Video.h  opencv2-Swift.h  opencv2.h
ios/opencv2.framework/Versions/A/Modules/: module.modulemap
ios/opencv2.framework/Versions/A/Modules/opencv2.swiftmodule/: arm64-apple-ios.swiftdoc  arm64-apple-ios.swiftinterface  arm64-apple-ios.swiftmodule  armv7-apple-ios.swiftdoc  armv7-apple-ios.swiftinterface  armv7.swiftdoc  armv7.swiftinterface  armv7.swiftmodule  armv7s-apple-ios.swiftmodule  i386-apple-ios-simulator.swiftdoc  i386-apple-ios-simulator.swiftinterface  i386-apple-ios-simulator.swiftmodule  x86_64-apple-ios-simulator.swiftdoc  x86_64-apple-ios-simulator.swiftinterface  x86_64-apple-ios-simulator.swiftmodule
ios/opencv2.framework/Versions/A/Modules/opencv2.swiftmodule/Project/: arm64-apple-ios.swiftsourceinfo  armv7-apple-ios.swiftsourceinfo  armv7.swiftsourceinfo  i386-apple-ios-simulator.swiftsourceinfo  x86_64-apple-ios-simulator.swiftsourceinfo
lib/: ffi.dart  main.dart
open_cv/: my_functions.cpp
test/: widget_test.dart
